--- a/estilos.css
+++ b/estilos.css
@@ -31,6 +31,7 @@ p {
   font-family: 'EB Garamond', serif;
   text-align: justify;
    font-size: 20px;
+   padding: 20px;
   margin-bottom: 20px;
 
 }
